Closed Bug 1305097 Opened 8 years ago Closed 8 years ago

Baldr: Enhance error reporting from the ToAST transformation

Categories

(Core :: JavaScript Engine: JIT, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla52
Tracking Status
firefox51 --- wontfix
firefox52 --- fixed

People

(Reporter: bbouvier, Assigned: bbouvier)

Details

Attachments

(1 file)

[Tracking Requested - why for this release]:

When there's a validation error in the module we're trying to print as text (using the devtools), we can instacrash the shell/browser.
Another big change: the binary-to-ast transform should in my opinion validate the module it's spitting output for.
Attachment #8794303 - Flags: review?(luke)
Comment on attachment 8794303 [details] [diff] [review]
error-reporting.patch

Review of attachment 8794303 [details] [diff] [review]:
-----------------------------------------------------------------

Agreed, thanks!
Attachment #8794303 - Flags: review?(luke) → review+
Track for 51+ as this is wasm related.
Pushed by bbouvier@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/89beb6c945b3
Enhance error reporting from the ToAST transformation; r=luke
Thankfully, the 0xc patch fixed most of those, so I (almost) just had to add the error test.
Status: NEW → ASSIGNED
https://hg.mozilla.org/mozilla-central/rev/89beb6c945b3
Status: ASSIGNED → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla52
Hi :bbouvier,
Since this also affects 51, do you think the patch is worth uplifting to 51?
Flags: needinfo?(bbouvier)
Hi :gchang,
WebAssembly is getting pushed back a bit, so no strong need to get this uplifted to 51. I think it's safe to not track this bug and let it ride the trains instead.
Thanks for the ping though!
Flags: needinfo?(bbouvier)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: