Bug 1305097: Enhance error reporting from the ToAST transformation; r=luke