js/src/asmjs/WasmBinaryToAST.h
@@ -28,7 +28,8 @@ namespace js {
 namespace wasm {
 
 bool
-BinaryToAst(JSContext* cx, const uint8_t* bytes, uint32_t length, LifoAlloc& lifo, AstModule** module);
+BinaryToAst(JSContext* cx, const uint8_t* bytes, uint32_t length, LifoAlloc& lifo,
+            AstModule** module);
 
 } // end wasm namespace
 } // end js namespace
