js/src/jit-test/tests/wasm/to-text-experimental.js
@@ -1,6 +1,8 @@
 // |jit-test| test-also-wasm-baseline
 load(libdir + "wasm.js");
 
+assertErrorMessage(() => wasmBinaryToText(wasmTextToBinary(`(module (func (result i32) (f32.const 13.37)))`), 'experimental'), WebAssembly.CompileError, /type mismatch/);
+
 function runTest(code, expected) {
   var binary = wasmTextToBinary(code);
   var s = wasmBinaryToText(binary, "experimental");
